# tiny-loader-linux

./: CMakeLists.txt  README.md  bitmap1.pbm  build-curl.sh  build-jpeglib.sh  build.sh  compress.c  config.c  dither.c  halftone.c  image.h  imagetypes.c  imagetypes.h  misc.c  new.c  pbm.c  reduce.c  send.c  tinyLoader.cpp  tinyLoaderSplashScreen.cpp  toucan.pbm  ugeneloader.cpp  ugeneloader.h  window.c  zio.c
